--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "less": "main.less",
   "peerDependencies": {
     "bedrock-quasar": "^2.0.0",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vuelidate": "^0.7.4"
   },
   "repository": {
     "type": "git",
