--- a/package.json
+++ b/package.json
@@ -23,8 +23,5 @@
   "bugs": {
     "url": "https://github.com/digitalbazaar/bedrock-vue-address-form/issues"
   },
-  "homepage": "https://github.com/digitalbazaar/bedrock-vue-address-form",
-  "bedrock": {
-    "browserDependencies": "all"
-  }
+  "homepage": "https://github.com/digitalbazaar/bedrock-vue-address-form"
 }
