--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/digitalbazaar/bedrock-vue-address-form/issues"
   },
-  "homepage": "https://github.com/digitalbazaar/bedrock-vue-address-form"
+  "homepage": "https://github.com/digitalbazaar/bedrock-vue-address-form",
+  "devDependencies": {
+    "eslint": "^5.14.1",
+    "eslint-config-digitalbazaar": "^1.6.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "jsdoc-to-markdown": "^4.0.1",
+    "node-fetch": "^2.3.0"
+  }
 }
