--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue.js address form component for Bedrock Web apps",
   "main": "index.js",
   "peerDependencies": {
-    "bedrock-quasar": "^2.0.0",
+    "bedrock-quasar": "digitalbazaar/bedrock-quasar#v1",
     "vue": "^2.5.16",
     "vuelidate": "^0.7.4"
   },
