--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-vue-address-form",
-  "version": "3.0.0",
+  "version": "3.0.1-0",
   "description": "Vue.js address form component for Bedrock Web apps",
   "main": "index.js",
   "peerDependencies": {
